--- a/npcs/lucatiel_sky_derosier.yaml
+++ b/npcs/lucatiel_sky_derosier.yaml
@@ -216,7 +216,6 @@ npc:
     #
     occupation:
     - Diplomat
-    
 
     #
     # D & D classes (case insensitive):
@@ -297,7 +296,6 @@ npc:
     #
     tendencies:
 
-
     #
     # Languages the character speaks
     # (human, dwarvish, etc).
@@ -314,7 +312,6 @@ npc:
     - Common
     - Elvish
     - Dwarvish
-
 
     #
     # Factions:
@@ -389,7 +386,9 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Be careful"/ "What don't you understand?"
+    expressions:
+    - "Be careful"
+    - "What don't you understand?"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -413,7 +412,7 @@ npc:
     #
     motivations: |
       Wants to protect their home
-      
+
     #
     # Passions:
     #
@@ -422,7 +421,7 @@ npc:
     #
     passions: |
       her home and her work
-      
+
     #
     # Vulnerabilities:
     #
@@ -431,7 +430,7 @@ npc:
     #
     vulnerabilities: |
       Will go to extremes in order to keep her homeland safe, and will work with anyone to achieve that end
-      
+
     #
     # Secrets:
     #
@@ -440,8 +439,7 @@ npc:
     #
     secrets: | 
       She used to be a thief
-       
-      
+
   #
   # The D & D stats block:
   # All integers.
@@ -466,25 +464,24 @@ npc:
   #
   specialties:
     skills:
-   - - Rogue Abilities:
-       - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
-       - Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
-       - Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
-       - Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
-       - Evasion: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail
-       - Reliable Talent: Whenever you make an ability check that lets you add your Proficiency Bonus, you can treat a d20 roll of 9 or lower as a 10.
+    - Rogue Abilities:
+      - Expertise: Double proficiency bonus with Thieve's Tools and Sleight of Hand
+        Sneak Attack: Once per turn can add 3d6 to one creature she hits with a ranged or finesse attack if she has advantage on the attack or if the target is engaged with another creater
+        Cunning Action: Can tak a bonus action on each turn to Hide, Disengage or Dash
+        Uncanny Dodge: When an attacker she can see hits her with an attack, she can use her Reaction to halve the damage 
+        Evasion: When you are subjected to an Effect that allows you to make a Dexterity saving throw to take only half damage, you instead take no damage if you succeed on the saving throw, and only half damage if you fail
+        Reliable Talent: Whenever you make an ability check that lets you add your Proficiency Bonus, you can treat a d20 roll of 9 or lower as a 10.
+      Thief Abilities:
+      - Fast Hands: you can use the Bonus Action granted by your Cunning Action to make a Dexterity (Sleight of Hand) check, use your thieves’ tools to Disarm a trap or open a lock, or take the Use an Object action
+        Second-Story Work: you gain the ability to climb faster than normal; climbing no longer costs you extra Movement. In addition, when you make a running jump, the distance you cover increases by a number of feet equal to
+                           your Dexterity modifier.
+        Supreme Sneak: you have advantage on a Dexterity (Stealth) check if you move no more than half your speed on the same turn
+        Use Magic Device: you have learned enough about the workings of magic that you can improvise the use of items even when they are not intended for you. You ignore all class, race, and level requirements on the use of
+                          Magic Items.       
 
-   - - Thief Abilities:
-       - Fast Hands: you can use the Bonus Action granted by your Cunning Action to make a Dexterity (Sleight of Hand) check, use your thieves’ tools to Disarm a trap or open a lock, or take the Use an Object action
-       - Second-Story Work: you gain the ability to climb faster than normal; climbing no longer costs you extra Movement. In addition, when you make a running jump, the distance you cover increases by a number of feet equal to
-                            your Dexterity modifier.
-       - Supreme Sneak: you have advantage on a Dexterity (Stealth) check if you move no more than half your speed on the same turn
-       - Use Magic Device: you have learned enough about the workings of magic that you can improvise the use of items even when they are not intended for you. You ignore all class, race, and level requirements on the use of
-                           Magic Items.       
-               
     special-abilities:
        - Proficiencies: Stealth, Sleight-of-Hand, Perception, Persuasion
-       - Feats: Sharpshooter, Weapons Master - Longbow, Crossbow, Shortbow, Dagger        
+         Feats: Sharpshooter, Weapons Master - Longbow, Crossbow, Shortbow, Dagger        
        
     attacks: |
       2 attacks with Longbow or Shadow Blade
@@ -492,16 +489,15 @@ npc:
       Stays at range whenever possible, will use invisibility to remain safe if she feels threatened
     special-equipment:
     - Bracers of Archery: Requires Attunement - While wearing these bracers, you have proficiency with the Longbow and Shortbow, and you gain a +2 bonus to Damage Rolls on Ranged Attacks made with such Weapons.
-    - Cloak of Protection: You gain a +1 bonus to AC and Saving Throws while you wear this cloak.
-    - +2 Longbow
-    - Shadow Blade: This magic dagger counts as a simple melee weapon with which you are proficient. It deals 2d8 psychic damage on a hit and has the finesse, light, and thrown properties (range 20/60). In addition, when you use
+      Cloak of Protection: You gain a +1 bonus to AC and Saving Throws while you wear this cloak.
+      Longbow: +2
+      Shadow Blade: This magic dagger counts as a simple melee weapon with which you are proficient. It deals 2d8 psychic damage on a hit and has the finesse, light, and thrown properties (range 20/60). In addition, when you use
                     the dagger to attack a target that is in dim light or darkness, you make the attack roll with advantage. If you drop the weapon or throw it, it dissipates at the end of the turn. Thereafter, you can use a
                     bonus action to cause the sword to reappear in your hand
-    - Ring of Invisibility: While wearing this ring, you can turn Invisible as an action. Anything you are wearing or carrying is Invisible with you. You remain Invisible until the ring is removed, until you Attack or Cast a
+      Ring of Invisibility: While wearing this ring, you can turn Invisible as an action. Anything you are wearing or carrying is Invisible with you. You remain Invisible until the ring is removed, until you Attack or Cast a
                             Spell, or until you use a Bonus Action to become visible again
-    - Boots of Levitation: Requires Attunement - While you wear these boots, you can use an action to cast the Levitate spell on yourself at will.
-    
-      
+      Boots of Levitation: Requires Attunement - While you wear these boots, you can use an action to cast the Levitate spell on yourself at will.
+
   profile:
 
     #
@@ -513,7 +509,7 @@ npc:
     #
     background-story: |
       A former thieves guild member who went straight and is now a diplomat that helps both as a liason between underworld activity and the government, as well as an ambassador to those who wish to visit the city
-      
+
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -525,32 +521,3 @@ npc:
     personality: |
       Lucatiel is a determined diplomat who works hard to help and maintain piece in her city. She is mildly embarassed of her time as a thief and tries to keep that to herself as much as possible, but does use her the
       connections from her former way of life to help her in her work 
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
