--- a/npcs/madam_stella.yaml
+++ b/npcs/madam_stella.yaml
@@ -297,7 +297,6 @@ npc:
     #
     tendencies:
 
-
     #
     # Languages the character speaks
     # (human, dwarvish, etc).
@@ -316,7 +315,6 @@ npc:
     - Halfling
     - Orcish
     - Elvish
-
 
     #
     # Factions:
@@ -337,7 +335,6 @@ npc:
     #
     - id: a_thieve_s_assassin_s_guild
       name: A Thieve's/Assassin's Guild
-
 
     #
     # Adjectives or other tags that can be used for searching.
@@ -362,7 +359,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  Stamping her wooden leg for emphasis, the madam shouts: "Grafters! Thieves!" The constable rolls his eyes and sighs.
+    introduction:  Stamping her wooden leg for emphasis, the madam shouts - /"Grafters! Thieves!/" The constable rolls his eyes and sighs.
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -389,7 +386,11 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "Hon"; "Darlin'"; "Don't be shy. Unless you're a tax-man"; "Woman's oldest professions: gardeners... and seamstresses."
+    expressions:
+    - "Hon"
+    - "Darlin'"
+    - "Don't be shy. Unless you're a tax-man"
+    - "Woman's oldest professions - gardeners... and seamstresses."
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -402,7 +403,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    mannerisms:   In brothel: touches men's chests, squeezes biceps, ruffles hair; in court: defends herself by yelling, banging peg leg.
+    mannerisms:   In brothel - touches men's chests, squeezes biceps, ruffles hair. In court - defends herself by yelling, banging peg leg.
 
   acting:
     #
@@ -413,7 +414,7 @@ npc:
     #
     motivations: |
       Driven by business growth, and by having the classiest, most beautiful bevy of "seamstresses" in town.
-      
+
     #
     # Passions:
     #
@@ -422,7 +423,7 @@ npc:
     #
     passions: |
       Making money; keeping her ladies happy, healthy, and active; cleansing via herbal teas and cranberries; fashion trends.
-      
+
     #
     # Vulnerabilities:
     #
@@ -431,7 +432,7 @@ npc:
     #
     vulnerabilities: |
       Better concept of rights over obligations, and of earnings over debts; the law finds her intimidating and exasperating.
-      
+
     #
     # Secrets:
     #
@@ -440,8 +441,7 @@ npc:
     #
     secrets: | 
       She knows who in town is cheating on their spouses and with whom
-       
-      
+
   #
   # The D & D stats block:
   # All integers.
@@ -466,16 +466,15 @@ npc:
   #
   specialties:
     skills:
+    - Dwarf Abilities:
+      - Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage
+        Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
+        Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
+                      instead of his normal Proficiency Bonus
 
-   - - Dwarf Abilities:
-       - Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage           
-       - Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
-       - Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
-                      instead of his normal Proficiency Bonus    
-               
     special-abilities:
        - Proficiencies: Perception, Persuasion, Intimidation
-       - Feats: N/A        
+         Feats: N/A        
        
     attacks: |
       1 attack with Dagger
@@ -483,8 +482,7 @@ npc:
       She'll only fight long enough for her security arrive
     special-equipment:
     - Dagger
-    
-      
+
   profile:
 
     #
@@ -508,7 +506,6 @@ npc:
       Though Stella is no longer active as a "seamstress" herself, she still hears every item of upper class news, gossip, and secrets that there is to hear.  Stella knows everything about just about every wealthy and/or noble
       man in town.  She is always happy to gossip, though she does also know the value of a thing, and she knows when to charge, and how much to charge.
 
-      
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -520,32 +517,4 @@ npc:
     personality: |
       Stella is tough and wiley, but keeps herself looking good and feeling good. Shes smart and wise with money and business. She also has a bit of a wild side and can come off as brash and cantankerous, especially when
       dealing with the law
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
+ 
